# Jandig

./: pyproject.toml
.github/workflows/: ci.yml  push.yml  requirements.yml
docker/: Dockerfile  base.Dockerfile  docker-compose.ci.yml  docker-compose.yml
src/: pyproject.toml
src/ARte/: pytest.ini
src/ARte/config/: settings.py  urls.py
src/ARte/users/: tests_users.py
