[tool.poetry]
name = "Jandig"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
MarkupSafe = "^2.0.1"
Django = "^2.2.24"
Jinja2 = "^2.10"
gunicorn = "^19.0"
Pillow = "^9.0.1"
django-cors-headers = "^3.13.0"
invoke = "^1.2.0"
django-environ = "^0.4.4"
psycopg2-binary = "^2.8.6"
django-boogie = "^0.13.3"
Sphinx = "^2.1.1"
django-docs = "^0.3.1"
Babel = "^2.7.0"
django-debug-toolbar = "^3.5.0"
gevent = "^21.12.0"
pymarker = "^0.3.1"
django-extensions = "^3.2.0"
factory-boy = "^3.2.1"
boto3 = "^1.17.26"
django-storages = "^1.11.1"
sentry-sdk = "^1.3.1"
whitenoise = "^6.0.0"
click = "^7.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
